refactor: optimize participation retrieval by caching all participations